--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main h2 {
     padding: 20px;
 }
 .elmer-style {
-    color: hotpink;
+    color: rgb(0, 255, 21);
     background-color: black;
     padding: 3px;
 }
